[package]
name = "gorgon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neo4rs = "0.6.2"
tokio = { version = "1.32.0", features = ["full"] }

syntax = { path = "/home/mrsmith/Desktop/rust-ide/rust-analyzer/crates/syntax" }