[package]
name = "gorgon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syntax = { git = "https://github.com/rust-lang/rust-analyzer.git" }
petgraph = "0.6.4"
winnow = "0.6.20"
stack-graphs = "0.14.1"
